--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width-device-width,initial-scale=1.0">
     
-    <link rel="stylesheet" href="css/configuracionGlobal.css">
+    <link rel="stylesheet" href="css/configuraciongeneral.css">
     <link rel="stylesheet" href="css/movil.css">
     
     <!-- tipo de letra -->
